--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         
         // Desserts
         { id: 9, name: 'Kunafa', description: 'Rough kunafa with Akkawi cheese, baked in the oven, drizzled with syrup, and garnished with Aleppo pistachios.', price: { 'Piece': 90 }, image: 'https://www2.0zz0.com/2025/09/25/01/389026282.jpg', category: 'Delicious Desserts' },
-        { id: 10, name: 'Halawet El Jibn', description: 'Rolls of semolina and cheese dough, stuffed with fresh cream and decorated with lemon blossom and pistachios.', price: { 'Plate': 110 }, image: 'https://images.unsplash.com/photo-1583304492418-d71c1753066b?q=80&w=1964&auto=format&fit=crop', category: 'Delicious Desserts' }
+        { id: 10, name: 'Halawet El Jibn', description: 'Rolls of semolina and cheese dough, stuffed with fresh cream and decorated with lemon blossom and pistachios.', price: { 'Plate': 110 }, image: 'https://www2.0zz0.com/2025/09/30/13/852852260.jpg', category: 'Delicious Desserts' }
       ];
 
       // --- Featured Dishes Logic ---
@@ -340,4 +340,5 @@
     });
   </script>
 </body>
+
 </html>
