--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
       const menuItems = [
         // Appetizers
-        { id: 1, name: 'Hummus with Meat', description: 'Hummus with tahini topped with pieces of lamb and roasted pine nuts.', price: { 'Meal': 120 }, image: 'https://images.unsplash.com/photo-1582512423020-a72e35a5135c?q=80&w=1974&auto=format&fit=crop', category: 'Levantine Appetizers' },
+        { id: 1, name: 'Hummus with Meat', description: 'Hummus with tahini topped with pieces of lamb and roasted pine nuts.', price: { 'Meal': 120 }, image: 'https://www2.0zz0.com/2025/09/30/13/178986133.jpg', category: 'Levantine Appetizers' },
         { id: 2, name: 'Mixed Grill Plate', description: 'A generous assortment of our finest charcoal-grilled meats, including shish tawook and kebab.', price: { 'Plate': 150 }, image: 'https://www2.0zz0.com/2025/09/25/01/326315888.jpg', category: 'Main Courses' },
         { id: 3, name: 'Tabbouleh', description: 'A refreshing salad of chopped parsley, mint, tomatoes, and bulgur, seasoned with olive oil and lemon.', price: { 'Serving': 80 }, image: 'https://images.unsplash.com/photo-1594041682984-7246f62b0a43?q=80&w=1974&auto=format&fit=crop', category: 'Levantine Appetizers' },
         
@@ -342,3 +342,4 @@
 </body>
 
 </html>
+
