--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         // Appetizers
         { id: 1, name: 'Hummus with Meat', description: 'Hummus with tahini topped with pieces of lamb and roasted pine nuts.', price: { 'Meal': 120 }, image: 'https://www2.0zz0.com/2025/09/30/13/178986133.jpg', category: 'Levantine Appetizers' },
         { id: 2, name: 'Mixed Grill Plate', description: 'A generous assortment of our finest charcoal-grilled meats, including shish tawook and kebab.', price: { 'Plate': 150 }, image: 'https://www2.0zz0.com/2025/09/25/01/326315888.jpg', category: 'Main Courses' },
-        { id: 3, name: 'Tabbouleh', description: 'A refreshing salad of chopped parsley, mint, tomatoes, and bulgur, seasoned with olive oil and lemon.', price: { 'Serving': 80 }, image: 'https://images.unsplash.com/photo-1594041682984-7246f62b0a43?q=80&w=1974&auto=format&fit=crop', category: 'Levantine Appetizers' },
+        { id: 3, name: 'Tabbouleh', description: 'A refreshing salad of chopped parsley, mint, tomatoes, and bulgur, seasoned with olive oil and lemon.', price: { 'Serving': 80 }, image: 'https://www2.0zz0.com/2025/09/30/13/209814347.jpg', category: 'Levantine Appetizers' },
         
         // Grills
         { id: 4, name: 'Shish Tawook', description: 'Skewers of chicken pieces marinated in yogurt and spices, grilled over charcoal.', price: { 'Meal': 180 }, image: 'https://images.unsplash.com/photo-1598514982901-ae62c08ae483?q=80&w=2070&auto=format&fit=crop', category: 'Charcoal Grills' },
@@ -342,4 +342,5 @@
 </body>
 
 </html>
+
 
