--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         { id: 3, name: 'Tabbouleh', description: 'A refreshing salad of chopped parsley, mint, tomatoes, and bulgur, seasoned with olive oil and lemon.', price: { 'Serving': 80 }, image: 'https://www2.0zz0.com/2025/09/30/13/209814347.jpg', category: 'Levantine Appetizers' },
         
         // Grills
-        { id: 4, name: 'Shish Tawook', description: 'Skewers of chicken pieces marinated in yogurt and spices, grilled over charcoal.', price: { 'Meal': 180 }, image: 'https://images.unsplash.com/photo-1598514982901-ae62c08ae483?q=80&w=2070&auto=format&fit=crop', category: 'Charcoal Grills' },
+        { id: 4, name: 'chicken and creamy mushroom dish', description: 'A signature lunch items, tailored for tasteful afternoons, with our tender chicken and creamy mushroom dish.', price: { 'Meal': 180 }, image: 'https://www2.0zz0.com/2025/09/30/13/132823984.jpg', category: 'Charcoal Grills' },
         { id: 5, name: 'Aleppo Kebab', description: 'Skewers of minced meat with authentic Aleppo spices and pepper, perfectly grilled.', price: { 'Meal': 190 }, image: 'https://www2.0zz0.com/2025/09/25/01/280323824.jpg', category: 'Charcoal Grills' },
         { id: 6, name: 'Arayes', description: 'Arabic bread stuffed with seasoned minced meat and grilled on charcoal until crispy.', price: { 'Serving': 220 }, image: 'https://images.unsplash.com/photo-1565557623262-b51c2513a641?q=80&w=1971&auto=format&fit=crop', category: 'Charcoal Grills' },
         
@@ -342,5 +342,6 @@
 </body>
 
 </html>
+
 
 
