--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Harir Restaurant Menu</title>
+  <title>Hareer Restaurant Menu</title>
   
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -51,6 +51,7 @@
         Harir Restaurant
       </h1>
       <p class="text-gray-300 text-lg mt-4">The Authentic Taste of Aleppo... Masterfully Crafted</p>
+      <p class="text-gray-300 text-lg mt-4">ESTABLISHED 2023</p>
     </header>
 
     <!-- Featured Dishes Section -->
@@ -342,6 +343,7 @@
 </body>
 
 </html>
+
 
 
 
