--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <main class="relative z-10 container mx-auto px-4 py-8">
     <header class="text-center my-12">
       <h1 class="text-5xl md:text-7xl font-bold text-amber-400">
-        Harir Restaurant
+        Hareer Restaurant
       </h1>
       <p class="text-gray-300 text-lg mt-4">The Authentic Taste of Aleppo... Masterfully Crafted</p>
       <p class="text-gray-300 text-lg mt-4">ESTABLISHED 2023</p>
@@ -343,6 +343,7 @@
 </body>
 
 </html>
+
 
 
 
