--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         { id: 6, name: 'Arayes', description: 'Arabic bread stuffed with seasoned minced meat and grilled on charcoal until crispy.', price: { 'Serving': 220 }, image: 'https://images.unsplash.com/photo-1565557623262-b51c2513a641?q=80&w=1971&auto=format&fit=crop', category: 'Charcoal Grills' },
         
         // Main Courses
-        { id: 7, name: 'Shakriya with Meat', description: 'Tender lamb pieces cooked in a cooked yogurt sauce (shami style) and served with white rice.', price: { 'Meal': 320 }, image: 'https://images.unsplash.com/photo-1519708227418-c8fd9a32b7a2?q=80&w=2070&auto=format&fit=crop', category: 'Main Courses' },
+        { id: 7, name: 'Kabab Khoush Khash', description: 'A delightful mix of Tabbouleh salad, Kabab Khoush Khash, each plate.', price: { 'Meal': 320 }, image: 'https://www2.0zz0.com/2025/09/30/23/820199352.jpg', category: 'Main Courses' },
         { id: 8, name: 'Manakeesh', description: 'A popular Levantine flatbread topped with various ingredients like thyme (za\'atar), cheese, or minced meat.', price: { 'Piece': 100 }, image: 'https://www2.0zz0.com/2025/09/25/01/382041625.jpg', category: 'Main Courses' },
         
         // Desserts
@@ -343,6 +343,7 @@
 </body>
 
 </html>
+
 
 
 
