--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         // Grills
         { id: 4, name: 'chicken and creamy mushroom dish', description: 'A signature lunch items, tailored for tasteful afternoons, with our tender chicken and creamy mushroom dish.', price: { 'Meal': 180 }, image: 'https://www2.0zz0.com/2025/09/30/13/132823984.jpg', category: 'Charcoal Grills' },
         { id: 5, name: 'Aleppo Kebab', description: 'Skewers of minced meat with authentic Aleppo spices and pepper, perfectly grilled.', price: { 'Meal': 190 }, image: 'https://www2.0zz0.com/2025/09/25/01/280323824.jpg', category: 'Charcoal Grills' },
-        { id: 6, name: 'Arayes', description: 'Arabic bread stuffed with seasoned minced meat and grilled on charcoal until crispy.', price: { 'Serving': 220 }, image: 'https://images.unsplash.com/photo-1565557623262-b51c2513a641?q=80&w=1971&auto=format&fit=crop', category: 'Charcoal Grills' },
+        { id: 6, name: 'Kibbeh Labanieh', description: 'Dishing out the ultimate flavor combo - Kibbeh Labanieh with Rice.', price: { 'Serving': 220 }, image: 'https://www2.0zz0.com/2025/09/30/23/540868318.jpg', category: 'Charcoal Grills' },
         
         // Main Courses
         { id: 7, name: 'Kabab Khoush Khash', description: 'A delightful mix of Tabbouleh salad, Kabab Khoush Khash, each plate.', price: { 'Meal': 320 }, image: 'https://www2.0zz0.com/2025/09/30/23/820199352.jpg', category: 'Main Courses' },
@@ -343,6 +343,7 @@
 </body>
 
 </html>
+
 
 
 
