--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="container mx-auto px-4 grid grid-cols-1 md:grid-cols-2 gap-8 text-center md:text-left">
       <div>
         <h3 class="text-2xl font-bold text-amber-400 mb-4">Contact Us</h3>
-        <p class="text-gray-300 mb-2"><strong>Harir Restaurant</strong></p>
+        <p class="text-gray-300 mb-2"><strong>Hareer Restaurant</strong></p>
         <p class="text-gray-300 mb-2"><strong>Address:</strong> Arkan Plaza - Sheikh Zayed City.</p>
         <p class="text-gray-300 mb-2"><strong>Phone:</strong> 01030566078</p>
         <p class="text-gray-300"><strong>WhatsApp:</strong> 01118091234</p>
@@ -343,6 +343,7 @@
 </body>
 
 </html>
+
 
 
 
